// TODO: Figure out how to test the resize behavior in jsdom, or just write
// tests with cypress
import React from "react";
import { act, fireEvent, render } from "@testing-library/react";
import { mocked } from "ts-jest/utils";
import ResizeObserverPolyfill from "resize-observer-polyfill";

import { TextArea } from "../TextArea";

jest.mock("resize-observer-polyfill");

const ResizeObserverMock = mocked(ResizeObserverPolyfill);
const DEFAULT_DOM_RECT: DOMRectReadOnly = {
  x: 0,
  y: 0,
  // this is the size with the default theme and a label on desktop
  height: 56,
  // just a random width
  width: 120,
  bottom: 0,
  left: 0,
  top: 0,
  right: 0,
  toJSON: () => "",
};

// TODO: Look into a way to maybe export this mock since it can be useful in
// other tests. This is really a copy/paste as a simplified version from the
// `useResizeObserver` tests
class MockedObserver implements ResizeObserver {
  public _callback: ResizeObserverCallback;

  public _elements: Element[];

  public constructor(callback: ResizeObserverCallback) {
    this._elements = [];
    this._callback = callback;
  }

  public observe(target: Element): void {
    this._elements.push(target);
  }

  public unobserve(target: Element): void {
    this._elements = this._elements.filter((el) => el !== target);
  }

  public disconnect(): void {
    this._elements = [];
  }

  public trigger(rect: Partial<DOMRectReadOnly> = {}) {
    const contentRect: DOMRectReadOnly = {
      ...rect,
      ...DEFAULT_DOM_RECT,
    };

    act(() => {
      this._callback(
        this._elements.map((target) => ({ target, contentRect })),
        this
      );
    });
  }
}

describe("TextArea", () => {
  let observer: MockedObserver | undefined;
  beforeAll(() => {
    ResizeObserverMock.mockImplementation((callback) => {
      observer = new MockedObserver(callback);
      return observer;
    });
  });

  beforeEach(() => {
    observer?.disconnect();
  });

  afterAll(() => {
    ResizeObserverMock.mockRestore();
  });

  it("should handle updating the height correctly based on the resize prop", () => {
    const props = {
      id: "text-area",
      resize: "auto" as const,
      label: "Label",
      "data-testid": "container",
    };

    const { container, rerender } = render(<TextArea {...props} />);
    const realContainer = container.firstElementChild;
    if (!observer || !realContainer) {
      throw new Error();
    }

    observer.trigger();
    // Note: The height should be 0 since none of the styles are available in
    // this runtime
    expect(realContainer).toMatchSnapshot();

    rerender(<TextArea {...props} resize="none" />);
    expect(realContainer).toMatchSnapshot();
  });

  it("should focus the textarea if the container is clicked", () => {
    const { container, getByRole } = render(
      <TextArea id="text-area" label="Label" />
    );

    const realContainer = container.firstElementChild;
    if (!realContainer) {
      throw new Error();
    }

    fireEvent.click(realContainer);
    expect(document.activeElement).toBe(getByRole("textbox"));
  });

  it("should force the inline prop if the resize prop is horizontal or both", () => {
    const props = {
      id: "text-area",
      label: "Label",
    };
    const { container, rerender } = render(
      <TextArea {...props} resize="auto" />
    );
    const realContainer = container.firstElementChild;
    if (!realContainer) {
      throw new Error();
    }

    expect(realContainer).not.toHaveClass("rmd-text-field-container--inline");

    rerender(<TextArea {...props} resize="none" />);
    expect(realContainer).not.toHaveClass("rmd-text-field-container--inline");

    rerender(<TextArea {...props} resize="vertical" />);
    expect(realContainer).not.toHaveClass("rmd-text-field-container--inline");

    rerender(<TextArea {...props} resize="both" />);
    expect(realContainer).toHaveClass("rmd-text-field-container--inline");

    rerender(<TextArea {...props} resize="horizontal" />);
    expect(realContainer).toHaveClass("rmd-text-field-container--inline");
  });
});
